<resources>
    <string name="app_name">Hanabi Tracker</string>


    <!-- MainActivity Strings -->

    <string name="no_cards_prompt">Number of cards</string>
    <string-array name="no_cards">
        <item>4</item>
        <item>5</item>
    </string-array>


    <string name="multicolor_prompt">Multicolor</string>
    <string-array name="multicolor_mode">
        <item>None</item>
        <item>Distinct</item>
        <item>All</item>
    </string-array>

    <string name="sharedprefs_no_cards">sharedprefs_noCards</string>
    <string name="sharedprefs_multicolor_mode">sharedprefs_multicolorMode</string>

    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>


    <!-- TrackerActivity Strings -->

    <string name="title_activity_tracker">TrackerActivity</string>

    <string name="delete">Remove</string>

    <string name="negative_info_prefix">NOT: </string>
    <string name="one_symbol">1</string>
    <string name="two_symbol">2</string>
    <string name="three_symbol">3</string>
    <string name="four_symbol">4</string>
    <string name="five_symbol">5</string>
    <string name="red_symbol">R</string>
    <string name="yellow_symbol">Y</string>
    <string name="blue_symbol">B</string>
    <string name="white_symbol">W</string>
    <string name="green_symbol">G</string>
    <string name="multicolor_symbol">M</string>


    <!-- SettingsActivity Strings -->
    <string name="title_activity_settings">Settings</string>

    <string name="negativeinfo_title">Negative Info</string>
    <string name="negativeinfo_summary">Negative Info Summary</string>
    <string name="negativeinfo_dialogtitle">Negative Info</string>
    <string name="negativeinfo_default">Display</string>
    <string-array name="negativeinfo_entries">
        <item>Display</item>
        <item>Hide</item>
    </string-array>
    <string-array name="negativeinfo_values">
        <item>Display</item>
        <item>Hide</item>
    </string-array>

    <string name="agedirection_title">Cards Shift Direction</string>
    <string name="agedirection_summary">Shift Direction Summary</string>
    <string name="agedirection_dialogtitle">Cards shift from</string>
    <string name="agedirection_default">Right to left</string>
    <string-array name="agedirection_entries">
        <item>Right to left</item>
        <item>Left to right</item>
    </string-array>
    <string-array name="agedirection_values">
        <item>Right to left</item>
        <item>Left to right</item>
    </string-array>

    <string name="negativeclue_title">Long Press Clue</string>
    <string name="negativeclue_summary">Summary</string>
    <string name="negativeclue_dialogtitle">Long press clue for no cards of that type</string>
    <string name="negativeclue_default">Disabled</string>
    <string-array name="negativeclue_entries">
        <item>Enable</item>
        <item>Disable</item>
    </string-array>
    <string-array name="negativeclue_values">
        <item>Enabled</item>
        <item>Disabled</item>
    </string-array>

    <string name="backgroundcolor_title">Background Color</string>
    <string name="backgroundcolor_summary">Background Color Summary</string>
    <string name="backgroundcolor_dialogtitle">Background color</string>
    <string name="backgroundcolor_default">White</string>
    <string-array name="backgroundcolor_entries">
        <item>White</item>
        <item>Black</item>
    </string-array>
    <string-array name="backgroundcolor_values">
        <item>White</item>
        <item>Black</item>
    </string-array>

    <!-- AnnotationActivity Strings -->

    <string name="annotation_title">Card Annotation</string>

    <string-array name="annotation_array">
        <item>Yes</item>
        <item>\?</item>
        <item>No</item>
    </string-array>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="multisuiterror">Multiple suits cannot be set to Yes.</string>
    <string name="multirankerror">Multiple ranks cannot be set to Yes.</string>


    <!-- AboutActivity Strings -->

    <string name="title_activity_annotation">AnnotationActivity</string>

    <string name="about_text"><![CDATA[
        <html>
<p>Hanabi Tracker is used to keep track of clues in the award-winning cooperative deduction game Hanabi.</p>

<p><b>Title screen</b></p>
<p>From the title screen, choose the number of cards and multicolor option for each game.</p>

<p>Multicolor options:<br>
<ul><li>None - Play without multicolor cards.</li>
<li>Distinct - Multicolor cards can be clued using the multicolor clue button.</li>
<li>All - Multicolor cards are all colors.  Cards are marked with a multicolored icon in the lower
right corner until they are known to not be multicolored.</li></ul></p>

<p><b>Settings screen</b></p>
<p>Negative Info is inferred from clues that are given about other cards.   For example, if you
receive a clue that your first card is red, then your other cards are necessarily not red.  This
negative information can be hidden or displayed below each card.</p>

<p>Long Press Clue allows you to give a clue like, \"You have no fives,\" by long pressing the 5
clue button.  This type of clue is permitted in some interpretations of the rules. </p>

<p>Cards Shift Direction controls which way the cards move after a card is removed from your hand.</p>

<p>Background Color affects the background of the Play screen.  Setting the background color to
Black may reduce power consumption.</p>

<p><b>Play screen</b></p>
<p>There are two ways to mark cards with clues: 1) Tap one or more cards and then tap a clue, or 2)
tap a clue and then tap one or more cards.  Using the second option, the clue button will remain
highlighted until another clue is selected.</p>

<p>When a card is played or discarded, tap the Remove button above the corresponding card.  A new
card is automatically added.</p>

<p>The Undo button will rollback clue or remove actions.  The Undo button may be used repeatedly to
undo multiple actions.</p>

<p><b>Card Annotation screen</b></p>
<p>Access the Annotation Screen by long-pressing a card.  The Annotation screen allows you to
update the positive or negative clue information for a card. Unlike entering normal clues,
annotating a card will not affect the negative information of other cards.  Use the annotation screen
when you deduce information about a card or can eliminate possibilities for a card.  In \"All\"
multicolor mode, you can toggle the multicolor indicator icon on and off by setting the multicolor
state to \"?\" and \"No.\"<br>

<p><b>Contact</b></p>
You can report bugs and request enhancements at <a href="mailto:hanabitracker@gmail.com">hanabitracker@gmail.com</a>.
If you find this app useful, please rate it on <a href="https://play.google.com/store/apps/details?id=com.rpalazzo.hanabitracker">Google Play</a>.

<p><b>Attribution</b></p>
<p><small><a href="https://github.com/google/material-design-icons">Material Design Icons</a> by
Google.  Used without modification under the <a href="https://creativecommons.org/licenses/by/4.0/legalcode">Creative Commons Attribution 4.0 International License (CC-BY-4.0)</a>.</small></p>
<p><small><a href="https://github.com/jlhonora/multistatetogglebutton">Multistagetogglebutton</a>
Copyright 2013-2015 Jose Honorato. http://honorato.org.  Licensed under the <a href="https://opensource.org/licenses/MIT">MIT License</a>.</small></p>
<p><small><a href="http://www.dafont.com/distro-bats.font">Distro Bats font</a> Copyright 2008
Peter A Designer.  Licensed under <a href="http://www.skyehaven.net/blog/wp-content/plugins/eht-downloads/multimediaSprint_v1/2455_fonts/fancy_eroded/notes/Read_Dis%20Extinct.txt">limited freeware</a>.</small></p>

<p><small>Hanabi Tracker app Copyright 2016-2019 R. Palazzo.<br>Version 1.5.2</small></p>

</html>]]>
    </string>

    <!-- firework icons are public domain from http://www.clker.com/clipart-blue-fireworks-1.html -->

</resources>
